2006-06-29  MenTaLguY  <mental@rydia.net>

	* src/desktop.cpp, src/desktop.h, src/widgets/desktop-widget.cpp,
	  src/widgets/desktop-widget.h, src/widgets/gradient-image.cpp,
	  src/widgets/gradient-image.h, src/widgets/gradient-toolbar.cpp,
	  src/widgets/gradient-toolbar.cpp:

	  switch to sigc++ SPObject signals

2006-06-27  MenTaLguY  <mental@rydia.net>

	* src/dialogs/sp-attribute-widget.cpp,
	  src/dialogs/sp-attribute-widget.h, src/sp-offset.cpp,
	  src/sp-offset.h, src/sp-shape.cpp, src/sp-shape.h,
	  src/sp-use-reference.cpp, src/sp-use-reference.h:

	  switch to sigc++ SPObject signals

2006-07-26  MenTaLguY  <mental@rydia.net>

	* src/dialogs/object-attributes.cpp:

	  switch to sigc++ "release"

2006-07-26  MenTaLguY  <mental@rydia.net>

	* src/style.cpp, src/style.h:

	  finish switching to sigc++ SPObject signals for SPStyle

2006-07-25  MenTaLguY  <mental@rydia.net>

	* src/widgets/gradient-vector.cpp, src/widgets/gradient-vector.h:

	  switch to sigc++ SPObject signals for SPGradientVectorSelector

2006-07-25  MenTaLguY  <mental@rydia.net>

	* autogen.sh, configure.ac, debian/control, tools-version.sh:

	  un-libtoolize the build process (yay!) -- we haven't actually
	  used libtool for ages

2006-07-25  MenTaLguY  <mental@rydia.net>

	* src/extension/plugin, src/extension/plugin/Makefile_insert,
	  src/extension/plugin/makefile.in, src/extension/plugin/.cvsignore,
	  src/Makefile.am, configure.ac:

	  remove vestigal plugin support

2006-07-24  MenTaLguY  <mental@rydia.net>

    * configure.ac: further work on LSB build configuration

2006-07-23  John Bintz  <jcoswell@coswellproductions.org>

  * src/verbs.cpp, src/event-context.cpp, src/node-context.cpp:

    forced redraw of canvas upon completion of zooming or upon
    starting rubber band selection events to work around event
    starvation issue at high zoom levels

2006-07-23  MenTaLguY  <mental@rydia.net>

  * src/widgets/paint-selector.cpp:
